Color template standardized across page.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <div class="section1 has-text-centered">
+    <div class="section1 has-text-centered has-background-dark has-text-light mb-2">
         <h1 class="is-size-1">Playlist Generator</h1>
     </div>
 
@@ -48,9 +48,9 @@
 
     <div class="section2 columns"> 
         <!--J.G Wiki Panel Starts-->
-        <div class="wiki column is-one-quarter"> 
+        <div class="wiki column is-one-quarter ml-2"> 
             <nav class="panel has-text-centered">
-                <p class="panel-heading">Genre Information</p>
+                <p class="panel-heading has-background-dark">Genre Information</p>
             </nav>
         </div>
         <!--J.G Wiki Panel Ends-->
@@ -61,14 +61,14 @@
                     <div class="navbar-start">  
                         <div class="navbar-item ui-widget">
                             <input
-                                class="input is-link"
+                                class="input is-success"
                                 id="genre-select"
                                 type="text"
                                 placeholder="Select Genre"
                             />
                         </div>
                         <div class="navbar-item js-modal-trigger" data-target="playlist-select">
-                            <button class="button is-link">Submit</button>
+                            <button class="button is-success">Submit</button>
                         </div>
                     </div>
                 </div>
