--- a/index.html
+++ b/index.html
@@ -5,20 +5,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" />
-    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
-    <!-- <link rel="stylesheet" href="./assets/css/style.css" /> -->
-    <title>Playlist Generator</title>
+    <title>Wikipedia Music Genre Search</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css" />
 </head>
 
 <body>
+    <section class="section">
+        <div class="container">
+            <h1 class="title">Wikipedia Music Genre Search</h1>
+            <div class="field has-addons">
+                <div class="control">
+                    <label class="label" for="search-query">Enter music genre (pop, rock, hip hop)</label>
+                    <input class="input" type="text" id="search-query" placeholder="Enter music genre (pop, rock, hip hop)" />
+                </div>
+                <div class="control">
+                    <button class="button is-info" id="search-wikipedia">Search</button>
+                </div>
+            </div>
+            <div class="field">
+                <label class="label" for="search-results">Search Results</label>
+                <div class="control">
+                    <textarea class="textarea" id="search-results" readonly></textarea>
+                </div>
+            </div>
+        </div>
+    </section>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
-        integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script> -->
-    <!-- <script src="./assets/js/script.js"></script> -->
+    <!-- Include JavaScript files here -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="sctipt.js"></script>
 </body>
 
 </html>
