wiki functionality added

--- a/index.html
+++ b/index.html
@@ -49,7 +49,12 @@
         <div class="wiki column is-one-quarter ml-2"> 
             <nav class="panel has-text-centered">
                 <p class="panel-heading has-background-success has-text-dark">Genre Information</p>
-                <textarea class="textarea" id="search-results" readonly></textarea>
+                <figure class="image is-256x256 my-4 mx-4">
+                    <img class="is-rounded" src="https://bulma.io/assets/images/placeholders/128x128.png" />
+                  </figure>
+                    <!--Dynamic Text for Wiki-->
+                  <div class="block mx-4" id="search-results">
+                  </div>
             </nav>
         </div>
         <!--J.G Wiki Panel Ends-->
