--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <nav class="panel has-text-centered">
                 <p class="panel-heading has-background-success has-text-dark">Genre Information</p>
                 <figure class="image is-256x256 my-4 mx-4">
-                    <img class="is-rounded" src="https://bulma.io/assets/images/placeholders/128x128.png" />
+                    <img class="is-rounded" id="main-image" src="https://craftypixels.com/placeholder-image/256x256/14161a/14161a" />
                   </figure>
                     <!--Dynamic Text for Wiki-->
                   <div class="block mx-4" id="search-results">
@@ -82,12 +82,6 @@
             </div>
         </div>
     </div>
-   
-
-    <!-- <div class="section5">
-        <div class="footer">Footer
-        </div>
-    </div> -->
 
     <input type="hidden" id='hidden-token'>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
